# hashdict

./: README.md  hashdict.py  pyproject.toml
tests/: test_hashdict.py
