[project]
name = "hashdict"
authors = [
    { name = "Caleb Hattingh", email = "caleb.hattingh@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["hash", "dictionary", "memory"]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/cjrh/hashdict"
Repository = "https://github.com/cjrh/hashdict"

[project.optional-dependencies]
test = [
    "pytest >= 7.0"
]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
